# focusbot-ai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-ci.yml
docs/: hardware_setup.md
src/focusbot/: __init__.py  __main__.py  assistant.py  config.py  gui.py  listener.py  main.py  memory.py  reminders.py  voice.py  wakeword.py
tests/: test_reminders.py
