[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "focusbot"
version     = "0.1.0"
description = "AI-powered desktop assistant with ADHD focus support"
readme      = "README.md"
requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.25.0",
    "pyttsx3>=2.90",
]

# Installs a `focusbot` command that runs main()
[project.scripts]
focusbot = "focusbot.main:main"

# Tells setuptools to look for packages inside src/
[tool.setuptools.packages.find]
where = ["src"]

# ── Dev / test dependencies ────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# ── Pytest configuration ───────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
